# moc-dao-tu-tien

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml
backend/: .gitignore  README.md  demo_diy.py  main.py  pyproject.toml
backend/alembic/versions/: d4a7b931e2b5_update_plant_model.py
backend/app/: dependencies.py  scheduler.py
backend/app/models/: plant.py  user.py
backend/app/routers/: admin.py  auth.py  plants.py
backend/app/services/: auth_service.py  plant_service.py  telemetry_service.py
backend/tests/: bot_simulator.py  test_ruff_ty.py
docs/: BRD.md  MocDaoTuTien_Test_Collection.json  PRD.md  README.md  Redesigned_Architecture.md  System_Architecture.md  System_Design.md
firmware/: README.md
frontend/: .env  .env.example  README.md  vite.config.js
frontend/src/: App.jsx
frontend/src/components/auth/: AdminRoute.jsx
frontend/src/components/ui/: Navbar.jsx
frontend/src/mocks/: data.js
frontend/src/pages/: AdminPage.jsx  CallbackPage.jsx  ClaimPage.jsx  DashboardPage.jsx  LeaderboardPage.jsx  LoginPage.jsx  PlantsListPage.jsx
frontend/src/services/: api.js
frontend/src/store/: authStore.js
