[project]
name = "backend"
version = "0.1.0"
description = "Backend cho hệ thống Mộc Đạo Tu Tiên - IoT + Gamification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "gmqtt>=0.6.16",
    "sse-starlette>=2.2.0",
    "apscheduler>=3.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
